Fixed #15291 -- Corrected alignment issue when actions are disabled in a ModelAdmin. Thanks to Julien Phalip for the report and patch.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@15573 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/changelists.css
+++ b/django/contrib/admin/media/css/changelists.css
@@ -67,7 +67,10 @@
 #changelist table tbody td:first-child, #changelist table tbody th:first-child {
     border-left: 0;
     border-right: 1px solid #ddd;
-    text-align: center;
+}
+
+#changelist table tbody td.action-checkbox {
+    text-align:center;
 }
 
 #changelist table tfoot {
